cmake_minimum_required(VERSION 3.12)

# Pull in PICO SDK (must be before project)
include(pico_sdk_import.cmake)

project(pico_examples C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# Initialize the SDK
pico_sdk_init()

add_executable(pico-project
  main.c
)

# Pull in our pico_stdlib which pulls in commonly used features
target_link_libraries(pico-project pico_stdlib)

# create map/bin/hex file etc.
pico_add_extra_outputs(pico-project)
